# routes/routes.js
@@ -6,6 +6,7 @@ const swaggerDocument = require('../swagger.json');
 
 router.use('/', require('./swagger'));
 router.get('/towns', towns.getTowns);
+router.get('/towns/single', towns.getSingleTown);
 router.post('/towns/insert', towns.insertTown);
 router.put('/towns/update/:town_id', towns.updateTown);
 router.delete('/towns/delete/:town_id', towns.deleteTown);
